--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="Team 9" content="Meeting Minutes">
-    <link rel="icon" type="image/x-icon" href="/screenshots/example.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://cse110-f2021.github.io/Lab2_ScavengerHunt/favicon.ico">
     <title> Meeting Minutes for CSE 110 </title>
   </head>
   <body>
@@ -64,7 +64,7 @@
                 </ul>
                 <div>
                     <header>This was what was presented at the meeting by a member today</header>
-                    <img src="/screenshots/example.png" alt="Girl in a jacket" width="800">
+                    <img src="/screenshots/example.png" alt="Screenshot" width="800">
                     <p>Here is a cool Audio file we decided to use in our project</p>
                     <audio controls>
                         <source src="horse.mp3" type="audio/mpeg">
