--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 </ul>
                 <div>
                     <header>This was what was presented at the meeting by a member today</header>
-                    <img src="/screenshots/example.png" alt="Screenshot" width="800">
+                    <img src="example.png" alt="Screenshot" width="800">
                     <p>Here is a cool Audio file we decided to use in our project</p>
                     <audio controls>
-                        <source src="horse.mp3" type="audio/mpeg">
+                        <source src="Horse.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                     <p>Here is a cool video we might include in our project</p>
