--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </style>
     <meta name="Team 9" content="Meeting Minutes">
     <link rel="shortcut icon" type="image/x-icon" href="https://cse110-f2021.github.io/Lab2_ScavengerHunt/favicon.ico">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="./index.css">
     <title> Meeting Minutes for CSE 110 </title>
   </head>
   <body>
